# starting-ragchatbot-codebase

./: CLAUDE.md  add-testcases.md  backend-tool-refactor.md  format.bat  format.sh  frontend-changes.md  pyproject.toml  quality.bat  quality.sh  run.bat
.claude/commands/: impl-feature.md
.github/: copilot-instructions.md
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_ai_generator.py  test_ai_generator_fix.py  test_api_endpoints.py  test_eval_bug.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
